[tool.poetry]
name = "ee-cli"
version = "0.0.1"
description = "A salve for timesmiths"
readme = "README.md"
authors = ["Ainsley <mcgrath.ainsley@gmail.com>"]

[tool.poetry.scripts]
ee = "ee_cli.main:app"

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.3.2"
pendulum = "^2.1.2"
rope = "^0.18.0"
pdbpp = "^0.10.2"
flake8 = "^3.8.4"
pylint = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
ipython = "^7.16.1"
pip-tools = "^5.3.1"
flake8 = "^3.8.4"
pylint = "^2.6.0"
isort = "^5.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
