[tool.poetry]
name = "ee-cli"
version = "0.1.14"
description = "A salve for timesmiths"
readme = "README.md"
authors = ["Ainsley <mcgrath.ainsley@gmail.com>"]
exclude = ["**/test_*.py", "**/conftest.py"]
include = ["USAGE.md"]

[tool.poetry.scripts]
ee = "ee_cli.main:app"

[tool.poetry.dependencies]
python = "^3.6.1"
typer = "^0.3.2"
pendulum = "^2.1.2"
pydantic = "^1.6.1"
pyperclip = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
ipython = "^7.16.1"
flake8 = "^3.8.4"
pylint = "^2.6.0"
isort = "^5.6.1"
pdbpp = "^0.10.2"
pre-commit = "^2.7.1"
typer-cli = "^0.0.11"
flake8-docstrings = "^1.5.0"

[build-system]
requires = ["poetry_core>=0.12"]
build-backend = "poetry.masonry.api"
